Melhorias no header, comentários para orientação e responsivo do header

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <header class="cabecalho">
+    <header class="header">
         <h1 class="nome">Maicon Rosa</h1>
         <nav class="navegacao">
-            <ul class="navegacao-lista">
+            <ul class="header-menu">
                 <li><a href="#experiencia">Experiência</a></li>
                 <li><a href="#">Formação</a></li>
                 <li><a href="#">Contato</a></li>
