Separação dos arquivos CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <h1 class="nome">Maicon Rosa</h1>
+        <h2 class="nome">Logo</h2>
         <nav class="navegacao">
             <ul class="header-menu">
                 <li><a href="#experiencia">Experiência</a></li>
@@ -23,46 +23,68 @@
             </ul>
         </nav>
     </header>
+
     <main>
-        <section class="descricao">
+        <section class="introducao">
             <img src="./img/perfil.jpg" alt="Foto de perfil" class="perfil">
             <div class="descricao-cargo">
-                <h2 class="cargo">Desenvolvedor Front End & UX/UI Designer</h2>
+                <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
                 <br>
-                <p class="localizacao">Localizado em São Paulo <span class="emoji">&#x1F307;</span></p>
+                <p class="localizacao">Localizado em São Paulo &#x1F307;</p>
             </div>
         </section>
 
-        <section id="experiencia" class="experiencia">
-            <h3>Experiência</h3>
-            <article class="experiencia-topicos">
-            <p class="experiencia-descricao">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trabalhei no UX e UI Design do projeto.</p>
-                <ul>
-                    <li class="experiencia-item">
-                        <p>Bikcraft</p>
-                        <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
-                        <p>Desenvolvedor Júnior</p>
-                        <p><span class="tag">HTML</span> <span class="tag">CSS</span> <span class="tag">JavaScript</span> <span class="tag">UX Design</span> <span class="tag">UI Design</span></p>
-                    </li>
+        <section aria-label="Experiência" id="experiencia" class="experiencia"> <!-- Definir aria-label para marcar ponto de referência no leitor de tela e id para âncora com o menu -->
+            <h3 class="subtitulo">Experiência</h3>
+            <div>
+                <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p> 
 
-                    <li class="experiencia-item">
-                        <p>Bikcraft</p>
-                        <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
-                        <p>Desenvolvedor Júnior</p>
-                        <p><span class="tag">HTML</span> <span class="tag">CSS</span> <span class="tag">JavaScript</span> <span class="tag">UX Design</span> <span class="tag">UI Design</span></p>
-                    </li>
+                <div class="empresa">
+                    <span class="empresa-ano">2045</span>
+                    <h4 class="empresa-titulo">Bikcraft</h4>
+                    <span class="empresa-titulo">Desenvolvedor Júnior</span>
+                    <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
+                    <ul class="empresa-habilidades">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>UX Design</li>
+                        <li>UI Design</li>
+                    </ul>
+                </div>
 
-                    <li class="experiencia-item">
-                        <p>Bikcraft</p>
-                        <p>Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
-                        <p>Desenvolvedor Júnior</p>
-                        <p><span class="tag">HTML</span> <span class="tag">CSS</span> <span class="tag">JavaScript</span> <span class="tag">UX Design</span> <span class="tag">UI Design</span></p>
-                    </li>
-                </ul>
-            </article>
+                <div class="empresa">
+                    <span class="empresa-ano">2044-45</span>
+                    <h4 class="empresa-titulo">Bikcraft</h4>
+                    <span class="empresa-titulo">Desenvolvedor Júnior</span>
+                    <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
+                    <ul class="empresa-habilidades">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>UX Design</li>
+                        <li>UI Design</li>
+                    </ul>
+                </div>
+
+                <div class="empresa">
+                    <span class="empresa-ano">2044</span>
+                    <h4 class="empresa-titulo">Bikcraft</h4>
+                    <span class="empresa-titulo">Desenvolvedor Júnior</span>
+                    <p class="empresa-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs.</p>
+                    <ul class="empresa-habilidades">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>UX Design</li>
+                        <li>UI Design</li>
+                    </ul>
+                </div>
+            </div>
+
+            
         </section>
     </main>
-    
 
 </body>
 
