--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h2 class="nome">Logo</h2>
         <nav class="navegacao">
             <ul class="header-menu">
-                <li><a href="#experiencia">Experiência</a></li>
-                <li><a href="#">Formação</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#experiencia">Experiência</a></li> <!-- #experiencia para linkar com setor do site -->
+                <li><a href="#formacao">Formação</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -81,10 +81,68 @@
                     </ul>
                 </div>
             </div>
+        </section>
 
-            
+        <section id="formacao" class="formacao" aria-label="Formação">
+            <div class="formacao-container">
+                <h3 class="subtitulo">Formação</h3>
+
+                <div>
+                    <p class="formacao-texto">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
+
+                    <ul class="formacao-lista">
+                        <li class="faculdade">
+                            <span class="faculdade-tipo">Bacharel</span>
+                            <h4 class="faculdade-curso">Administração de Empresas</h4>
+                            <span class="faculdade-instituicao">UFRRJ</span>
+                        </li>
+
+                        <li class="faculdade">
+                            <span class="faculdade-tipo">Tecnólogo</span>
+                            <h4 class="faculdade-curso">Design Digital</h4>
+                            <span class="faculdade-instituicao">Infnet</span>
+                        </li>
+
+                        <li class="faculdade">
+                            <span class="faculdade-tipo">Mestre</span>
+                            <h4 class="faculdade-curso">User Experience Design</h4>
+                            <span class="faculdade-instituicao">UCLL</span>
+                        </li>
+                    </ul>
+
+                    <div class="formacao-extra">
+                        <div class="cursos">
+                            <h4>Cursos Intensivos</h4>
+                            <ul>
+                                <li>UX Design & UI Design <span>56h</span></li> 
+                                <li>Front End para iniciantes <span>72h</span></li>
+                            </ul>
+                        </div>
+
+                        <div class="idiomas">
+                            <h4>Idiomas</h4>
+                            <ul>
+                                <li>Inglês <span>/ Fluente</span></li> 
+                                <li>Espanhol <span>/ Intermediário</span></li>
+                            </ul>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer class="rodape" id="contato">
+        <div class="rodape-container">
+            <p class="rodape-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
+            <ul class="rodape-contato">
+                <li>lobo@gmail.com</li>
+                <li>+55 11 99999-9999</li>
+                <li><a href="#">@instagram</a></li>
+            </ul>
+
+            <p class="rodape-copy">Lobo. Alguns direitos reservados.</p>
+        </div>
+    </footer>
 
 </body>
 
