--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desenvolvedor Front End & UX/UI Designer, localizado em São Paulo">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.min.css">
     <title>Maicon - Web Developer</title>
 </head>
 
@@ -26,7 +27,7 @@
 
     <main>
         <section class="introducao">
-            <img src="./img/perfil.jpg" alt="Foto de perfil" class="perfil">
+            <img src="./img/perfil.jpg" alt="Foto de perfil" class="perfil" width="360" height="520">
             <div class="descricao-cargo">
                 <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
                 <br>
